--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.0.0",
     "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
+    "d3-ng2-service": "^1.23.2",
     "font-awesome": "^4.7.0",
     "primeng": "^5.0.2",
     "rxjs": "^5.5.2",
